# cleaner_cli

./: .cleanerrc.example  .gitignore  LICENSE  README.md  SPEC.md  cleaner.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
homebrew/: cleaner-cli.rb
scripts/: update_homebrew_formula.py
src/cleaner/: __init__.py  __main__.py  cleaner.py  cli.py  config.py  rules.py  scanner.py
tests/: conftest.py  test_cleaner.py  test_cli.py  test_config.py  test_rules.py  test_scanner.py
