[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleaner"
version = "0.1.0"
description = "macOS system cache & temp file cleaner CLI"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
cleaner = "cleaner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
